<resources>
    <string name="language_title">Language</string>
    <string name="settings_cat_general">General</string>
    <string name="language_current">Language: %1$s</string>
    <string name="language_automatic">Automatic (device language)</string>
    <string name="language_save_failed">Could not save your language. Please try again.</string>
    <string name="try_feed_instafetching">Insta-fetching stories…</string>
    <string name="try_feed_fetch_failed">Unable to fetch stories. Tap to try again.</string>
    <string name="try_feed_empty">No stories are available from this site yet. Tap to refresh.</string>
    <string name="image_viewer_close">Close image</string>
    <string name="image_viewer_loading">Loading image…</string>
    <string name="image_viewer_failed">Could not load the full image.</string>
    <string name="image_viewer_retry">Try again</string>
    <string name="image_viewer_copy">Copy Image</string>
    <string name="image_viewer_save">Save Image</string>
    <string name="image_viewer_share">Share Image…</string>
    <string name="image_viewer_open_link">Open Link</string>
    <string name="image_viewer_copied">Image copied</string>
    <string name="image_viewer_saved">Saved to Pictures</string>
    <string name="image_viewer_save_failed">Could not save the image.</string>
    <string name="image_viewer_share_failed">Could not share the image.</string>
    <string name="image_viewer_storage_permission">Allow storage access to save images, then try again.</string>
    <string name="image_viewer_show_actions">Show image actions</string>
    <string name="settings_story_toolbar_position">Story list toolbar position</string>
    <string name="settings_story_toolbar_top">Top</string>
    <string name="settings_story_toolbar_bottom">Bottom</string>
    <string name="story_header_mark_read_cutoff">Choose how far back to mark read</string>
    <string name="newsblur">NewsBlur</string>
    <string name="login_username_hint">username</string>
    <string name="login_username_or_email_hint">username or email</string>
    <string name="login_password_hint">password</string>
    <string name="login_registration_email_hint">email address</string>
    <string name="login_button_login">Login</string>
    <string name="login_segment_sign_in">Log In</string>
    <string name="login_segment_sign_up">Sign Up</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_custom_server">Self-hosted custom server</string>
    <string name="login_custom_server_hint">https://www.newsblur.com</string>
    <string name="login_custom_server_subtitle">Use your own NewsBlur installation</string>
    <string name="login_custom_server_active">Custom server: %1$s</string>
    <string name="login_custom_server_edit">Tap to edit or reset your server URL</string>
    <string name="login_custom_server_dialog_title">Custom server</string>
    <string name="login_custom_server_dialog_body">Leave this blank to use NewsBlur, or enter the URL of your self-hosted installation. It takes effect immediately for login and signup.</string>
    <string name="login_message_error">There was problem logging in to NewsBlur.</string>
    <string name="login_logging_in">Logging in…</string>
    <string name="login_logged_in">Reticulating splines…</string>
    <string name="login_retrieving_feeds">Retrieving feeds…</string>
    <string name="login_next">Next</string>
    <string name="login_custom_server_scheme_error">Expected \'https://\' in custom server URL</string>
    <string name="login_custom_server_invalid">Enter a valid custom server URL.</string>
    <string name="login_tagline">A personal news reader bringing
people together to talk about the world.</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="search_for_feed">Search for feeds</string>
    <string name="loading">Loading…</string>
    <string name="story_navigation_failed">Couldn\'t open the story. Please try again.</string>
    <string name="orig_text_loading">Fetching story text…</string>
    <string name="follow_error">There was a problem following the user.</string>
    <string name="unfollow_error">There was a problem unfollowing the user.</string>
    <string name="description_login_button">Press to log in</string>
    <string name="description_login_logo">NewsBlur Logo</string>
    <string name="description_profile_picture">The user\'s profile picture</string>
    <string name="description_row_folder_icon">folder icon</string>
    <string name="description_row_feed_icon">feed icon</string>
    <string name="description_row_feed_mute_toggle">feed mute toggle</string>
    <string name="description_activity_icon">An icon illustrating the user\'s activity</string>
    <string name="description_follow_button">Follow or unfollow a user</string>
    <string name="description_comment_user">Comment user image</string>
    <string name="description_empty_list_image">Empty list placeholder</string>
    <string name="description_menu">Menu</string>
    <string name="story_settings">Story settings</string>
    <string name="title_choose_folders">Choose folders for feed %s</string>
    <string name="title_rename_feed">Rename feed %s</string>
    <string name="title_rename_folder">Rename folder %s</string>
    <string name="all_stories_title">All Site Stories</string>
    <string name="daily_briefing_title">Daily Briefing</string>
    <string name="infrequent_title">Infrequent Site Stories</string>
    <string name="widely_read_stories_title">Widely Read Stories</string>
    <string name="long_reads_title">Long Reads</string>
    <string name="good_reads_title">Good Reads</string>
    <string name="all_shared_stories_title">All Shared Stories</string>
    <string name="global_shared_stories_title">Global Shared Stories</string>
    <string name="read_stories_title">Read Stories</string>
    <string name="menu_delete_feed">Delete feed</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_notifications_choose">Notifications</string>
    <string name="menu_notifications_disable">Disable notifications</string>
    <string name="menu_notifications_focus">Notify on new focus stories</string>
    <string name="menu_notifications_unread">Notify on all new stories</string>
    <string name="menu_text_size">Text size</string>
    <string name="menu_text_size_xs">XS</string>
    <string name="menu_text_size_s">S</string>
    <string name="menu_text_size_m">M</string>
    <string name="menu_text_size_l">L</string>
    <string name="menu_text_size_xl">XL</string>
    <string name="menu_text_size_xxl">XXL</string>
    <string name="menu_save_story">Save this story</string>
    <string name="menu_unsave_story">Unsave this story</string>
    <string name="menu_oldest_mark_older_stories_as_read">Mark older as read</string>
    <string name="menu_oldest_mark_newer_stories_as_read">Mark newer as read</string>
    <string name="story_menu_open_feed">Open feed</string>
    <string name="story_menu_share_link">Share link…</string>
    <string name="story_menu_share_story">Share story…</string>
    <string name="menu_mark_story_as_read">Mark as read</string>
    <string name="menu_mark_unread">Mark as unread</string>
    <string name="menu_search_stories">Search…</string>
    <string name="menu_instafetch_feed">Insta-fetch Stories</string>
    <string name="menu_infrequent_cutoff">Infrequent stories per month</string>
    <string name="menu_intel">Intelligence trainer</string>
    <string name="menu_rename_feed">Rename feed</string>
    <string name="menu_story_list_style_choose">List style</string>
    <string name="menu_save_search">Save Search</string>
    <string name="list_style_list">List</string>
    <string name="list_style_grid_f">Grid (fine)</string>
    <string name="list_style_grid_m">Grid (medium)</string>
    <string name="list_style_grid_c">Grid (coarse)</string>
    <string name="story_content_preview_none">Title only (none)</string>
    <string name="story_content_preview_small">2 lines (small)</string>
    <string name="story_content_preview_medium">4 lines (medium)</string>
    <string name="story_content_preview_large">6 lines (large)</string>
    <string name="mark_read_on_scroll_disabled">Leave unread</string>
    <string name="mark_read_on_scroll_enabled">Read on scroll</string>
    <string name="menu_mark_all_as_read">Mark all as read</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_feedback">Send app feedback</string>
    <string name="menu_feedback_post">Create a feedback post</string>
    <string name="menu_feedback_email">Email a bug report</string>
    <string name="menu_theme_choose">Theme</string>
    <string name="menu_spacing">Spacing</string>
    <string name="menu_loginas">Login as…</string>
    <string name="forwarding_email_address">Forwarding email address</string>
    <string name="setup_instructions">Setup instructions \u25bc</string>
    <string name="setup_instructions_details">To read your email newsletters in NewsBlur, forward your newsletters to your custom email address shown above.\n\nIn Gmail, go to Settings > Forwarding and click on Add a forwarding address. Add your custom NewsBlur email address.\n\nGmail will walk you through confirming the email address. You\'ll want to come back to NewsBlur and look for the confirmation email under the "Newsletters" folder.\n\nNext, create a filter with all of your newsletters so that they forward to the custom address on NewsBlur.</string>
    <string name="feeds_shortcuts">Feeds shortcuts</string>
    <string name="import_export">Import/Export…</string>
    <string name="settings">Preferences…</string>
    <string name="menu_mute_sites">Mute Sites…</string>
    <string name="menu_notifications">Notifications…</string>
    <string name="widget">Widget</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="menu_story_order">Story order</string>
    <string name="comfortable">Comfortable</string>
    <string name="compact">Compact</string>
    <string name="all_stories">All stories</string>
    <string name="unread_only">Unread only</string>
    <string name="menu_story_content_preview">Story content preview</string>
    <string name="menu_story_thumbnail_preview">Thumbnail preview</string>
    <string name="menu_mark_read_on_scroll">Mark read on scroll</string>
    <string name="menu_read_filter">Read story filter</string>
    <string name="story_thumbnail_left_hand_small">Left-hand small</string>
    <string name="story_thumbnail_left_hand_large">Left-hand large</string>
    <string name="story_thumbnail_right_hand_small">Right-hand small</string>
    <string name="story_thumbnail_right_hand_large">Right-hand large</string>
    <string name="story_thumbnail_no_image_preview">No image preview</string>
    <string name="infrequent_choice_title">Stories from sites with</string>
    <string name="infrequent_5">&lt; 5 stories/month</string>
    <string name="infrequent_15">&lt; 15 stories/month</string>
    <string name="infrequent_30">&lt; 30 stories/month</string>
    <string name="infrequent_60">&lt; 60 stories/month</string>
    <string name="infrequent_90">&lt; 90 stories/month</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="short_open_all_stories">Open All Site Stories</string>
    <string name="short_open_all_stories_key" translatable="false">\u2325 E</string>
    <string name="short_switch_views">Switch Views</string>
    <string name="short_switch_views_key_left" translatable="false">\u2190</string>
    <string name="short_switch_views_key_right" translatable="false">\u2192</string>
    <string name="short_add_site">Add Site</string>
    <string name="short_add_site_key" translatable="false">\u2325 A</string>
</resources>