<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_settings"
          android:title="@string/settings"
          app:showAsAction="never" />

    <item android:id="@+id/menu_mute_sites"
        android:title="@string/menu_mute_sites"
        app:showAsAction="never" />

    <item android:id="@+id/menu_widget"
        android:title="@string/widget"
        app:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/menu_premium_account"
        android:title="@string/menu_premium_account"
        app:showAsAction="never" />

    <item android:id="@+id/menu_import_export"
        android:title="@string/import_export"
        app:showAsAction="never" />

    <item android:id="@+id/menu_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="never" />

    <item android:id="@+id/menu_text_size"
        android:title="@string/menu_text_size" >
        <menu>
            <group android:checkableBehavior="single" >
                <item android:id="@+id/menu_text_size_xs"
                    android:title="@string/menu_text_size_xs" />
                <item android:id="@+id/menu_text_size_s"
                    android:title="@string/menu_text_size_s" />
                <item android:id="@+id/menu_text_size_m"
                    android:title="@string/menu_text_size_m" />
                <item android:id="@+id/menu_text_size_l"
                    android:title="@string/menu_text_size_l" />
                <item android:id="@+id/menu_text_size_xl"
                    android:title="@string/menu_text_size_xl" />
                <item android:id="@+id/menu_text_size_xxl"
                    android:title="@string/menu_text_size_xxl" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/menu_spacing"
        android:title="@string/menu_spacing" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_spacing_comfortable"
                    android:title="@string/comfortable" />
                <item android:id="@+id/menu_spacing_compact"
                    android:title="@string/compact" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/menu_theme"
          android:title="@string/menu_theme_choose" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_theme_auto"
                    android:title="@string/auto" />
                <item android:id="@+id/menu_theme_light"
                      android:title="@string/light" />
                <item android:id="@+id/menu_theme_dark"
                      android:title="@string/dark" />
                <item android:id="@+id/menu_theme_black"
                      android:title="@string/black" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/menu_feedback_post"
                android:title="@string/menu_feedback_post"
                app:showAsAction="never" />
            <item android:id="@+id/menu_feedback_email"
                android:title="@string/menu_feedback_email"
                app:showAsAction="never" />

        </menu>
    </item>

    <item android:id="@+id/menu_loginas"
        android:title="@string/menu_loginas"
        app:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>
