<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/story_menu_read">
        <item android:id="@+id/menu_mark_story_as_unread" android:title="@string/menu_mark_unread" android:icon="@drawable/ic_indicator_unread" />
        <item android:id="@+id/menu_mark_story_as_read" android:title="@string/menu_mark_story_as_read" android:icon="@drawable/ic_read_check" />
        <item android:id="@+id/menu_mark_older_stories_as_read" android:title="@string/menu_oldest_mark_older_stories_as_read" android:icon="@drawable/ic_arrow_up" />
        <item android:id="@+id/menu_mark_newer_stories_as_read" android:title="@string/menu_oldest_mark_newer_stories_as_read" android:icon="@drawable/ic_arrow_down" />
    </group>
    <group android:id="@+id/story_menu_save">
        <item android:id="@+id/menu_save_story" android:title="@string/menu_save_story" android:icon="@drawable/ic_saved" />
        <item android:id="@+id/menu_unsave_story" android:title="@string/menu_unsave_story" android:icon="@drawable/ic_unsaved" />
    </group>
    <group android:id="@+id/story_menu_share">
        <item android:id="@+id/menu_send_story" android:title="@string/story_menu_share_link" android:icon="@drawable/ic_send_to" />
        <item android:id="@+id/menu_send_story_full" android:title="@string/story_menu_share_story" android:icon="@drawable/ic_story_text_gray46" />
    </group>
    <group android:id="@+id/story_menu_feed">
        <item android:id="@+id/menu_go_to_feed" android:title="@string/story_menu_open_feed" android:icon="@drawable/ic_rss" />
        <item android:id="@+id/menu_intel" android:title="@string/menu_intel" android:icon="@drawable/ic_feed_train" />
    </group>
</menu>
