<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="?defaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feeds_shortcuts"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/short_open_all_stories"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/short_open_all_stories_key"
                android:textSize="15sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/short_switch_views"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/short_switch_views_key_left"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/short_switch_views"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/short_switch_views_key_right"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/short_add_site"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="?defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/short_add_site_key"
                android:textSize="15sp" />

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
