<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingHorizontal="25dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="?defaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forwarding_email_address"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_email"
        style="?defaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_setup"
        style="?defaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="6dp"
        android:text="@string/setup_instructions"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_setup"
        style="?defaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setup_instructions_details"
        android:textSize="12sp"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>
